feat: adding user features
