# src/models/Deliverman.ts
@@ -1,5 +1,11 @@
- export class Deliverman{
+import {Role} from "../types/Role";
+
+export class Deliverman{
     id?: string;
     username: string;
-    password: string
+    password: string;
+    email: string;
+    driver_licence: string;
+    role: Role;
+    created_at: Date;
 }
