# src/routes.ts
@@ -5,6 +5,7 @@ import {AuthDelivermanController} from "./controllers/authDelivermanController";
 import {DelivermanController} from "./controllers/delivermanController";
 import {DeliveryController} from "./controllers/deliveryController";
 import {IsAuthentication} from "./middlewares/isAuthentication";
+import {UserController} from "./controllers/userController";
 
 const routes = Router();
 const clientController = new ClientController();
@@ -12,6 +13,7 @@ const delivermantController = new DelivermanController();
 const authClientController = new AuthClientController();
 const authDelivermanController = new AuthDelivermanController();
 const deliveryController = new DeliveryController();
+const userController = new UserController();
 
 routes.post("/clients/", clientController.handle)
 routes.get("/clients/deliveries", IsAuthentication, clientController.deliveries)
@@ -25,6 +27,7 @@ routes.post("/deliveries/", IsAuthentication,  deliveryController.handle)
 routes.put("/deliveries/:id", IsAuthentication,  delivermantController.update)
 routes.get("/deliveries/available", IsAuthentication,  delivermantController.available)
 
+routes.post("/users", userController.create);
 
 export {routes}
 
